<resources>
    <string name="app_name">AppMakeupPAM</string>
    <string name="pesq">Pesquise por nome ou marca</string>
    <string name="hello"><![CDATA[Olá <Username>!]]></string>
    <string name="cadastrar">Cadastrar</string>
    <string name="perfil">Perfil</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="a_beleza_est_em_voc">A beleza está em você</string>
    <string name="makeup_daily">MakeUp Daily</string>
    <string name="no_search_term">sem termo para busca</string>
    <string name="no_network">Sem conexão</string>
    <string name="str_empty">\" \"</string>
    <string name="n_o_possui_conta_cadastre_se">Não possui conta? Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="visualizar">Visualizar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="text_home">Makeup Daily surgiu do interesse de duas jovens programadoras pelo cuidado com a pele e a beleza, desejando compartilhar este interesse criaram o app Makeup Daily. Para que outras jovens pudessem encontrar os produtos perfeitos para sua pele, a partir da composição dos produtos, avaliações, categoria e resenhas publicadas por outros usuários do app.</string>
</resources>